@@ -94,6 +94,7 @@ module Zena
 
         # Return an array of accessor methods for the matched relation alias.
         def relation_alias(match)
+          return nil if respond_to?("#{match[0]}=") # native method
           return nil if match[0] == 'parent_id'
           role     = match[1]
           field    = match[2]
